--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,50 @@
 {
-  "name": "spotify-clone-mern",
+  "name": "e-commerce-clone-mern",
   "version": "1.0.0",
-  "description": "spotify-clone",
+  "description": "ECommerce-Clone",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --files src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "Huseyin-Cakir",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "eslint": "^8.41.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.22",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@types/body-parser": "^1.19.2",
+    "@typegoose/typegoose": "^11.2.0",
     "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.0.1",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "ts-custom-error": "^3.3.1",
     "ts-node-dev": "^2.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
