--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spotify-clone-mern",
+  "name": "e-commerce-clone-mern",
   "version": "1.0.0",
-  "description": "",
+  "description": "ECommerce Clone App",
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\"  \"npm run dev --prefix frontend\" ",
