--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "huseyin-cakir",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.0.1"
+    "@types/body-parser": "^1.19.2",
+    "concurrently": "^8.0.1",
+    "express-rate-limit": "^6.7.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
