--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "concurrently": "^8.0.1",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
     "reflect-metadata": "^0.1.13"
   }
