--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
+    "@types/debug": "^4.1.8",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -34,8 +35,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.0.1",
+    "debug": "^4.3.4",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
