--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@types/react-router-dom": "5.3.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
@@ -20,7 +22,8 @@
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.7",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "6.11.2"
+    "react-router-dom": "6.11.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
